--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    background-image: url(../encriptador/imagenes/black-glitch-effect-digital-noise-texture-background.jpg);
+    background-image: url(imagenes/black-glitch-effect-digital-noise-texture-background.jpg);
     font-family: Helvetica, Times, Tahoma, sans-serif;
   }
   
